--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
-    "jquery": "^3.1.1"
+    "angular-ui-router": "^0.3.1"
   }
 }
